--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-blob-util": "^5.0.0",
+    "@config-plugins/react-native-pdf": "^5.0.0",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "axios": "^1.3.5",
     "expo": "~48.0.11",
+    "expo-dev-client": "~2.2.1",
     "expo-status-bar": "~1.4.4",
+    "fbjs": "^3.0.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-blob-util": "^0.17.3",
+    "react-native-navigation": "^7.32.1",
+    "react-native-navigation-search-bar": "^1.0.8",
+    "react-native-pdf": "^6.6.2",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
